--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,9 @@
     --honeydew-: #EFF9F0; /* Honeydew */
     --yankees-blue-: #102542; /* Yankees Blue */
     --electric-blue-: #77E3FF;
+    --japanese-indigo-:#264653;
+    --middle-blue:#82D2E2;
+    --cadet-blue:#629FAC;
 }
 
 /* ================================================================================== */
@@ -47,6 +50,8 @@ button{
 a{
     text-decoration:none;
     cursor: pointer;
+    color:var(--smoky-black-);
+
 }
 
 a:visited{
@@ -65,7 +70,7 @@ section{
 }
 
 section h1{
-    background-color:var(--rusty-red-);
+    background-color:var(--japanese-indigo-);
     color: var(--snow-);
     margin: 1em auto;
     padding: 0.3em 1em;
@@ -93,7 +98,7 @@ section h1{
 /* ================================================================================== */
 .navbar{
     padding: 1em;
-    background-color: var(--rusty-red-);
+    background-color: var(--japanese-indigo-);
     display:flex;
     align-items:center;
     justify-content: space-between;
@@ -119,7 +124,7 @@ section h1{
 
 .nav-item{
     list-style:none;
-    background-color:var(--yankees-blue-);
+    background-color:var(--cadet-blue);
     padding: 0.5em 1em 0.5em 1em;
     text-align:left;
 }
@@ -138,7 +143,7 @@ section h1{
 .eventCard{
     padding:0.5em 1em 1em 1em;
     margin: 2em 1em;
-    border: 3px solid var(--rust-red-light-);
+    border: 3px solid var(--cadet-blue);
     border-radius: 5px;
 }
 
@@ -151,7 +156,7 @@ section h1{
 }
 
 .eventCard hr{
-    border: 2px solid var(--rusty-red-);
+    border: 2px solid var(--japanese-indigo-);
     border-radius: 3px;
     width: 4em;
 }
@@ -196,7 +201,7 @@ section h1{
     width:150px;
     height:150px;
     border-radius:50%;
-    border: 3px solid var(--rusty-red-);
+    border: 3px solid var(--cadet-blue);
     padding: 0.2em;
 }
 
@@ -223,7 +228,7 @@ section h1{
 /* ================================================================================== */
 .footer{
     padding: 1em;
-    background-color:var(--rusty-red-);
+    background-color:var(--japanese-indigo-);
     color:white;
 }
 
