--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -80,7 +80,7 @@ section h1{
 
 /* ================================================================================== */
 .masthead{
-    background-color:var(--yankees-blue-);
+    background-color:var(--middle-blue);
     background-image: url("/assets/images/000146824.png");
     background-position: center;
     background-repeat: no-repeat;
@@ -88,11 +88,11 @@ section h1{
     height: max-content;
     padding: 1em;
 
-    display: none;
+    display: block;
 }
 
 .masthead h1{
-    color:var(--snow-);
+    color:var(--japanese-indigo-);
 }
 
 /* ================================================================================== */
@@ -140,6 +140,39 @@ section h1{
 }
 
 /* ================================================================================== */
+
+.carousel{
+    background-color:black;
+}
+  
+.carousel-cell{
+    width: 100%;
+    height:100%;
+    overflow:hidden;
+}
+
+.carousel-cell img{
+    height:100%;
+    object-fit:cover;
+}
+
+.carousel-cell a{
+    cursor: pointer;
+}
+
+.carousel-cell p{
+    position:absolute;
+    bottom:0;
+    left:0;
+    background-color: rgba(0,0,0,0.6);
+    color:white;
+    width:100%;
+    text-align:left;
+    padding:0.5em;
+    margin:0;
+}
+
+/* ================================================================================== */
 .eventCard{
     padding:0.5em 1em 1em 1em;
     margin: 2em 1em;
@@ -150,10 +183,10 @@ section h1{
 .eventTitle, .eventDate, .eventLocation, .eventLink{
     margin:0.5em;
 }
-
+/* 
 .eventTitle{
     
-}
+} */
 
 .eventCard hr{
     border: 2px solid var(--japanese-indigo-);
@@ -161,17 +194,18 @@ section h1{
     width: 4em;
 }
 
-.eventDate{
+/* .eventDate{
 
 }
 
 .eventLocation{
 
-}
+} */
+
 /* ================================================================================== */
-.announcements{
+/* .announcements{
     
-}
+} */
 
 .announcementItem{
     text-align:left;
@@ -190,10 +224,13 @@ section h1{
     font-size:1em;
 }
 
-.announcementLink{
+/* .announcementLink{
     
-}
+} */
+
 /* ================================================================================== */
+
+
 .ambassador img{
     margin:2em auto;
     object-fit:cover;
@@ -203,12 +240,15 @@ section h1{
     border-radius:50%;
     border: 3px solid var(--cadet-blue);
     padding: 0.2em;
+    margin:0 auto;
 }
 
 .ambassadorCard{
+    margin: 0 auto;
     display:grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: min-content 1fr;
     align-items:center;
+    width: 70%;
 }
 
 .ambassadorLinks{
