--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -102,6 +102,9 @@ section h1{
     display:flex;
     align-items:center;
     justify-content: space-between;
+    min-height:8vh;
+    position:relative;/*experiement*/
+    z-index:6;
 }
 
 .brand{
@@ -114,7 +117,14 @@ section h1{
 }
 
 .nav-collapse{
+    background-color:var(--cadet-blue);
     display:none;
+    position:absolute;
+    top:8vh;
+    width:100%;
+    left:0;
+    z-index:5;
+    margin:0;
 }
 
 .navbar ul{
@@ -124,9 +134,9 @@ section h1{
 
 .nav-item{
     list-style:none;
-    background-color:var(--cadet-blue);
     padding: 0.5em 1em 0.5em 1em;
     text-align:left;
+    margin:0;
 }
 
 .nav-item a{
@@ -235,8 +245,8 @@ section h1{
     margin:2em auto;
     object-fit:cover;
     object-position: 0 20%;
-    width:150px;
-    height:150px;
+    width:130px;
+    height:130px;
     border-radius:50%;
     border: 3px solid var(--cadet-blue);
     padding: 0.2em;
@@ -244,15 +254,16 @@ section h1{
 }
 
 .ambassadorCard{
-    margin: 0 auto;
     display:grid;
-    grid-template-columns: min-content 1fr;
+    grid-template-columns: min-content auto;
     align-items:center;
     width: 70%;
+    margin: 0 auto;
 }
 
 .ambassadorLinks{
     display:grid;
+    font-size:0.7em;
     
 }
 /* ================================================================================== */
@@ -276,3 +287,45 @@ section h1{
     color:white;
 }
 /* ================================================================================== */
+
+
+
+
+@media (min-width: 576px) {
+
+}
+
+
+@media (min-width: 768px){
+
+}
+
+
+@media (min-width: 992px){
+    .navbar{
+        display:flex;
+        justify-content:space-around;
+        align-items:center;
+        min-height: 8vh;
+    }
+
+    .toggle{
+        display:none;
+    }
+    .nav-collapse{
+        display:flex;
+        align-items:center;
+        position:static;
+        background-color:transparent;
+        
+    }
+    .nav-item{
+        
+        /* width:30%; */
+    }
+}
+
+
+@media (min-width: 1200px){
+
+}
