--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -141,7 +141,16 @@ section h1{
 
 .nav-item a{
     text-decoration: none;
+    padding:0 0.3em;
+    margin:0;
     color:var(--snow-);
+    transition: color 0.3s,background-color 0.3s, border-radius 0.3s;
+}
+
+.nav-item a:hover{
+    color:var(--middle-blue);
+    background-color: rgba(0,0,0,0.5);
+    border-radius:3px;
 }
 
 .fa-bars{
@@ -220,10 +229,16 @@ section h1{
 .announcementItem{
     text-align:left;
     padding-left: 1em;
+    position:relative;
+    transition: 
+    background-color 0.3s,
+    transform 0.3s;
 }
 
 .announcementItem:hover{
-    background-color:var(--honeydew-);
+    background-color:var(--middle-blue);
+    transform: translate(1em,0);
+    
 }
 
 .announcementDate{
@@ -297,15 +312,105 @@ section h1{
 
 
 @media (min-width: 768px){
-
+    .carousel-cell{
+        height:400px;
+    }
 }
 
 
 @media (min-width: 992px){
+    .container{
+        display:grid;
+        grid-template-columns: 1fr 1fr 350px;
+        grid-template-rows: auto;
+        grid-gap:1em;
+        margin: 0 1em;
+        grid-template-areas:
+        "header header header"
+        "photos photos ambassador"
+        "events events contact"
+        "announcements announcements ."
+        "footer footer footer";
+    }
+
+    section{
+        width: 100%;
+        
+        /* border: 1px solid red; */
+    }
+
+    section h1{
+        border-radius:0;
+        margin-top:0;
+        text-align:left;
+    }
+
+    .masthead{
+        grid-area: header;
+        
+    }
+
+    .eventPhotos{
+        grid-area: photos;
+    }
+
+    .carousel-cell{
+        height:400px;
+    }
+
+    .events{
+        grid-area: events;
+    }
+
+    .announcements{
+        grid-area: announcements;
+        margin-bottom:5%;
+    }
+
+    .ambassador{
+        grid-area:ambassador;
+        grid-template-rows: min-content auto;
+    }
+
+    .ambassadorCard{
+        margin: auto auto;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+        "photo photo"
+        "text text";
+        grid-row-gap:1em;
+    }
+
+    .ambassadorCard img{
+        grid-area:photo;
+        width:200px;
+        height:200px;
+    }
+
+    .ambassadorLinks{
+        grid-area:text;
+        font-size: 1em;
+    }
+
+    .ambassadorLinks h3{
+        margin:0.3em 0;
+    }
+
+    .contact{
+        grid-area: contact;
+    }
+
+    .footer{
+        grid-area: footer;
+    }
+
+
+
+
     .navbar{
         display:flex;
-        justify-content:space-around;
-        align-items:center;
+        
+        
         min-height: 8vh;
     }
 
@@ -315,6 +420,7 @@ section h1{
     .nav-collapse{
         display:flex;
         align-items:center;
+        justify-content: flex-end;
         position:static;
         background-color:transparent;
         
