--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -122,9 +122,21 @@ section h1{
     position:absolute;
     top:8vh;
     width:100%;
+    height:0;
     left:0;
     z-index:5;
     margin:0;
+    opacity:0;
+    transition:opacity 0.3s, height 0.3s;
+}
+
+.nav-collapse-active{
+    display:block;
+}
+
+.nav-collapse-show{
+    opacity:1;
+    height: 170px;
 }
 
 .navbar ul{
@@ -159,6 +171,9 @@ section h1{
 }
 
 /* ================================================================================== */
+.eventPhotos{
+    margin-bottom:1em;
+}
 
 .carousel{
     background-color:black;
@@ -189,6 +204,33 @@ section h1{
     text-align:left;
     padding:0.5em;
     margin:0;
+}
+
+.flickity-button{
+    background-color:transparent;
+    display:none;
+    transition:background-color 0.3s;
+    border-radius: 3px;
+}
+
+.flickity-button:hover{
+    background-color:rgba(0,0,0,0.5);
+}
+
+.flickity-button-icon{
+    fill:white;
+}
+
+.flickity-page-dots{
+    bottom:-10px;
+}
+
+.flickity-page-dots .dot{
+    height: 4px;
+    width: 40px;
+    margin:0;
+    border-radius: 0;
+    background-color:var(--japanese-indigo-);
 }
 
 /* ================================================================================== */
@@ -345,6 +387,29 @@ section h1{
         text-align:left;
     }
 
+    .navbar{
+        display:flex;
+        min-height: 8vh;
+    }
+
+    .toggle{
+        display:none;
+    }
+    .nav-collapse{
+        display:flex;
+        align-items:center;
+        justify-content: flex-end;
+        position:static;
+        background-color:transparent;
+        transition:none;
+        opacity:1;
+        height:max-content; /*Safety net for now*/ 
+    }
+    .nav-item{
+        
+        /* width:30%; */
+    }
+
     .masthead{
         grid-area: header;
         
@@ -356,6 +421,10 @@ section h1{
 
     .carousel-cell{
         height:400px;
+    }
+
+    .flickity-button{
+        display:block;
     }
 
     .events{
@@ -404,31 +473,7 @@ section h1{
         grid-area: footer;
     }
 
-
-
-
-    .navbar{
-        display:flex;
-        
-        
-        min-height: 8vh;
-    }
-
-    .toggle{
-        display:none;
-    }
-    .nav-collapse{
-        display:flex;
-        align-items:center;
-        justify-content: flex-end;
-        position:static;
-        background-color:transparent;
-        
-    }
-    .nav-item{
-        
-        /* width:30%; */
-    }
+    
 }
 
 
