--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,7 @@
 
 html{
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 *, *:before, *:after{
     box-sizing: inherit;
@@ -102,9 +103,7 @@ section h1{
     display:flex;
     align-items:center;
     justify-content: space-between;
-    min-height:8vh;
-    position:relative;/*experiement*/
-    z-index:6;
+    height:80px;
 }
 
 .brand{
@@ -120,11 +119,10 @@ section h1{
     background-color:var(--cadet-blue);
     display:none;
     position:absolute;
-    top:8vh;
+    top:80px;
     width:100%;
     height:0;
     left:0;
-    z-index:5;
     margin:0;
     opacity:0;
     transition:opacity 0.3s, height 0.3s;
@@ -389,7 +387,7 @@ section h1{
 
     .navbar{
         display:flex;
-        min-height: 8vh;
+        height:80px;
     }
 
     .toggle{
